<resources>
    <string name="app_name">ClickTixMobile</string>
    <string name="contrasenia_input">Contraseña</string>
    <string name="correo_input">Correo</string>
    <string name="iniciar_sesion_con_title">Iniciar sesion con</string>
    <string name="register_label">No tienes cuenta?</string>
    <string name="register_text">Registrate aquí</string>
    <string name="fb_description">Botón de inicio con Facebook</string>
    <string name="ig_description">Botón de inicio con Instagram</string>
    <string name="google_description">Botón de inicio con Google</string>


    <string name="msg_error_login1">Debe completar los campos de ingreso</string>
    <string name="msg_error_login2">El campo correo está vacío, por favor ingrese su email</string>
    <string name="msg_error_login3">El campo contraseña está vacío, por favor ingrese su contraseña</string>
    <string name="msg_error_password_mismatch">Las contraseñas no coinciden</string>
    <string name="sinopsisContenido">La historia de Tim Ballard, un exagente del gobierno de Estados Unidos, que renuncia a su trabajo para dedicar su vida a salvar a los niños de los traficantes sexuales mundiales.</string>
    <string name="genero">Genero: DRAMA</string>
    <string name="nombrePelicula">Nombre: SONIDOS DE LIBERTAD</string>
    <string name="tituloPelicula">SONIDOS DE LIBERTAD</string>
    <string name="numero_tarjera">Numero Tarjera</string>
    <string name="ver_funciones">Ver Funciones</string>
    <string name="fecha_de_estreno">Fecha de estreno:</string>
    <string name="clasificacion">Clasificacion:</string>
    <string name="sinopsis">Sinopsis</string>
    <string name="numero_tarjeta">Numero Tarjeta</string>
    <string name="nombre_titular">Nombre Titular</string>
    <string name="codigo_seguridad">Codigo Seguridad</string>
    <string name="fecha_de_vencimiento">Fecha de Vencimiento</string>
    <string name="boton_para_back">boton para back</string>
    <string name="passconfirm_register">Confirmar Contraseña</string>
    <string name="tickets_title">Tus tickets</string>
    <string name="tickets_title_header">Tus Tickets</string>
    <string name="ticket_title_text">Titulo</string>
    <string name="ticket_date_text">Fecha</string>
    <string name="ticket_time_text">Horario</string>
    <string name="ticket_language_text">Idioma</string>
    <string name="ticket_seats_const">Numero Entradas:</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
    <string name="enviar">Enviar</string>
    <string name="width_portada_home">500</string>
    <string name="fecha_de_estreno_label">"Fecha de Estreno: "</string>
    <string name="titulo_label">"Titulo: "</string>
    <string name="dimension">Dimension</string>
    <string name="_2d">2D</string>
    <string name="_3d">3D</string>
    <string name="idioma">Idioma</string>
    <string name="ingles">Ingles</string>
    <string name="espa_ol">Español</string>
    <string name="cantidad_de_butacas">Cantidad de Butacas</string>
    <string name="dia_de_la_funcion">Dia de la funcion</string>
    <string name="cantidad_de_butacas_hint">Cantidad de butacas</string>
    <string name="buy_detail_title">Detalles de la compra:</string>
    <string name="buy_detail_filmt_label">Titulo:</string>
    <string name="buy_detail_dimension">Dimension:</string>
    <string name="buy_detail_lang">Idioma:</string>
    <string name="buy_detail_date">Fecha:</string>
    <string name="buy_detail_time">Hora</string>
    <string name="buy_detail_seats">Butacas:</string>
    <string name="bt_view_tickets_details">Ver tus tickets</string>
    <string name="contact_info">Para cualquier duda o consulta les dejamos nuestros medios de contacto:</string>
    <string name="contact_phone">Telefono: 5236-666</string>
    <string name="contact_adress">Direccion: Avenida Corrientes 2037</string>
    <string name="contact_mail">Mail: clicktix@contacto.com.ar</string>
    <string name="contact_thanks">Gracias por utilizar nuestra app!</string>
    <string name="d_opt_1">2D</string>
    <string name="d_opt_2">3D</string>
    <string name="time_opt_1">12:00</string>
    <string name="time_opt_2">14:00</string>
    <string name="time_opt_3">16:00</string>
    <string name="time_opt_4">18:00</string>
    <string name="time_opt_5">20:00</string>
    <string name="time_opt_6">22:00</string>
    <string name="seats_opt_1">1</string>
    <string name="seats_opt_2">2</string>
    <string name="seats_opt_3">3</string>
    <string name="seats_opt_4">4</string>
    <string name="continue_function_btn">Continuar</string>
    <string name="login_btn">INGRESAR</string>
    <string name="payment_confirm_btn">CONFIRMAR</string>
    <string name="verify_mail_btn">Verificar correo electronico</string>
    <string name="no_tickets_on_user">No se encontró ningun ticket vinculado con tu cuenta...</string>
    <string name="navigation_helper">Te invitamos a</string>
    <string name="btn_from_tickets_to_main">REVISAR NUESTRA CARTELERA</string>
    <string name="verify_header">Verificacion de Correo electronico</string>
    <string name="ticket_list_i_seats">Butacas:</string>
    <string name="ticket_list_i_lang">Idioma</string>
    <string name="ticket_list_i_time">Horario</string>
    <string name="ticket_list_i_date">Fecha</string>
    <string name="ticket_list_i_dim">Dimension</string>
    <string name="ticket_list_i_title">Título</string>

</resources>