<!-- res/layout/ticket_item_layout.xml -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loaderLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageView
        android:id="@+id/ticket_image"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:src="@drawable/loading"
        app:srcCompat="@drawable/loading" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/ticket_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_title" />

        <TextView
            android:id="@+id/ticket_dimension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_dim" />

        <TextView
            android:id="@+id/ticket_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_date" />

        <TextView
            android:id="@+id/ticket_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_time" />

        <TextView
            android:id="@+id/ticket_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_lang" />

        <TextView
            android:id="@+id/ticket_seats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ticket_list_i_seats" />

    </LinearLayout>

</LinearLayout>
