<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8D8D8"
    android:elevation="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/containerNavbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:background="#FAFAFA"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/containerPortada"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_volver_tickets"
            android:layout_width="112dp"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:background="#FAFAFA"
            android:contentDescription="TODO"
            app:srcCompat="@drawable/flecha_izquierda" />

        <ImageView
            android:id="@+id/id_logo_home"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="45dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo"
            tools:layout_marginStart="0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerDescripcionPelicula"
        android:layout_width="408dp"
        android:layout_height="500dp"
        android:background="#FAFAFA"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="30dp"
        android:paddingEnd="20dp"
        android:paddingBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerNavbar"
        tools:circularflow_radiusInDP="20dp">

        <TextView
            android:id="@+id/contacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Contacto"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtSinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/contact_info" />


        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:text="@string/contact_phone"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_adress"
            android:textStyle="bold"
            tools:paddingBottom="5dp" />

        <org.osmdroid.views.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_marginVertical="10dp"
            android:layout_height="222dp"
            />

        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/contact_mail"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtContacto2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/contact_thanks" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>