<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/containerNavbar"
            android:layout_width="match_parent"
            android:layout_height="81dp"
            android:layout_marginBottom="1dp"
            android:background="#FAFAFA"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/containerPortada"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_volver_home"
                android:layout_width="112dp"
                android:layout_height="61dp"
                android:layout_weight="1"
                android:background="#FAFAFA"
                android:contentDescription="@string/boton_para_back"
                app:srcCompat="@drawable/flecha_izquierda" />

            <ImageView
                android:id="@+id/id_logo_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="45dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo"
                tools:layout_marginStart="0dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="30dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/numeroTarjeta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numero_tarjeta">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nombreTitular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_titular"
                tools:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/codigoSeguridad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/codigo_seguridad"
                tools:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fechaVencimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_de_vencimiento"
                tools:layout_marginTop="30dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnConfirmarPago"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/primary_color"
                android:elevation="3dp"
                android:text="CONFIRMAR" />


        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>