<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TicketsActivity">

    <ImageButton
        android:id="@+id/btn_volver_tickets"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="363dp"
        android:layout_weight="1"
        android:background="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flecha_izquierda"
        android:contentDescription="TODO" />

    <LinearLayout
        android:id="@+id/navbar"
        android:layout_width="411dp"
        android:layout_height="103dp"
        android:background="#FAFAFA"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_volver_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            app:srcCompat="@drawable/menu_hambur"
            android:contentDescription="TODO" />

        <ImageView
            android:id="@+id/id_logo_home"
            android:layout_width="554dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/logo" />

        <ImageView
            android:id="@+id/id_perfil_tickets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="20dp"
            app:srcCompat="@drawable/perfil" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/navbar">

        <TextView
            android:id="@+id/tickets_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:layout_marginBottom="30dp"
            android:text="@string/tickets_title_header"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/tickets_container"
            android:layout_width="350dp"
            android:layout_height="500dp"
            android:padding="10dp"
            android:translationX="29dp">

            <LinearLayout
                android:id="@+id/ticket_example"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/ticket_image_container"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/ticket_image"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:srcCompat="@drawable/pelicula_foto_prueba" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ticket_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_title_text" />

                    <TextView
                        android:id="@+id/ticket_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_date_text" />

                    <TextView
                        android:id="@+id/ticket_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_time_text" />

                    <TextView
                        android:id="@+id/ticket_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ticket_language_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/ticket_seats"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ticket_seats_const" />

                        <TextView
                            android:id="@+id/tickets_seats_var"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_weight="1" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>